PROJECT(PRM_RUN)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PRM_RUN_VERSION_MAJOR "2")
SET(PRM_RUN_VERSION_MINOR "0")
SET(PRM_RUN_VERSION_PATCH "0")

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

FIND_PACKAGE(aGrUM REQUIRED)

IF (aGrUM_FOUND)
  INCLUDE(${AGRUM_USE_FILE})
  INCLUDE_DIRECTORIES(${AGRUM_INCLUDE_DIR})
ELSE (aGrUM_FOUND)
  MESSAGE(FATAL_ERROR "Please install aGrUM")
ENDIF (aGrUM_FOUND)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -DNDEBUG")
FIND_PACKAGE(CXX14)
IF(CXX14_FOUND)
  SET(CMAKE_CXX_FLAGS "${CXX14_FLAGS} ${CMAKE_CXX_FLAGS}")
ELSE()
  MESSAGE(FATAL_ERROR "The aGrUM framework requires C++14. Please use a C++14 compliant compiler.")
ENDIF()

ADD_EXECUTABLE (prm_run src/main.cpp)
TARGET_LINK_LIBRARIES(prm_run ${AGRUM_LIBRARIES})

